--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-postcss": "^2.3.9",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-source-filesystem": "^2.3.14",
@@ -20,6 +21,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.4",
     "prettier": "2.0.5",
     "tailwindcss": "^1.4.6"
   },
@@ -28,8 +30,11 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
+    "prebuild": "npm run build:css",
+    "build:css": "tailwind build tailwind.css -o src/styles/main.css",
+    "watch:css": "tailwind.css -o src/styles/main.css -w",
+    "build": "npm run build:css && gatsby build",
+    "develop": "npm run build:css & npm run watch:css & gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
