--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@stripe/stripe-js": "^1.8.0",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-layout": "^1.3.10",
@@ -16,12 +17,14 @@
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-source-filesystem": "^2.3.19",
+    "gatsby-source-stripe": "^3.1.1",
     "gatsby-transformer-sharp": "^2.5.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-responsive-carousel": "^3.2.9"
+    "react-responsive-carousel": "^3.2.9",
+    "use-shopping-cart": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.8.4",
